# cli

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: api.rs  display.rs  main.rs  server.rs
web-display/: elm.json  package.json  webpack.config.js
web-display/src/: Main.elm  app.js  index.html  style.scss
