[package]
name = "rumblebot"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[dependencies]
logic = { path = "../logic/logic" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_with = "1.4.0"
maplit = "1.0"

tokio = { version = "1.0", features = ["process", "macros", "io-std", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3.5"
warp = { version = "0.3", default-features = false }
static_dir = "0.1.3"
webbrowser = "0.5.4"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json"] }

native-runner = { path = "../logic/env-runners/native" }
wasi-process = "0.3"
wasmer = { version = "1.0", default-features = false, features = ["default-jit", "default-cranelift"] }
wasmer-cache = "1.0"
wasmer-wasi = "1.0"

anyhow = "1.0.31"
itertools = "0.9.0"
tempfile = "3.1.0"
structopt = "0.3.15"
clap = { version = "2.33", default-features = false }
shell-words = "1.0.0"
once_cell = "1.4.0"
directories = { package = "directories-next", version = "2.0" }
toml = "0.5"
async-trait = "0.1.36"
owning_ref = "0.4.1"
rpassword = "5.0"
strum = { version = "0.18.0", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.8", default-features = false }

termcolor = "1.1"

[features]
default = ["build-cranelift"]
build-cranelift = ["wasmer-compiler-cranelift"]
build-llvm = ["wasmer-compiler-llvm"]

[build-dependencies]
wasmer = { version = "1.0", default-features = false, features = ["jit"] }
wasmer-engine = "1.0"
wasmer-compiler-cranelift = { version = "1.0", optional = true }
wasmer-compiler-llvm = { version = "1.0", optional = true }

[patch.crates-io]
static_dir = { git = "https://github.com/coolreader18/static_dir", branch = "tokio1" }
multipart = { git = "https://github.com/coolreader18/multipart", rev = "ee033794ada7c322e3cef50713854dff873f546d" }
