[package]
name = "rumblebot"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

[dependencies]
logic = { path = "../logic/logic" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.7.0"
maplit = "1.0"

tokio = { version = "1.36", features = ["process", "macros", "io-std", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3.30"
warp = { version = "0.3", default-features = false }
static_dir = "0.2"
webbrowser = "0.8.13"
reqwest = { version = "0.12", features = [
  "cookies",
  "json",
  "native-tls-vendored",
] }

native-runner = { path = "../logic/env-runners/native" }
wasi-process2 = "0.3"
wasmer = { version = "2.0", default-features = false, features = [
  "default-universal",
  "default-cranelift",
] }
wasmer-cache = "2.0"
wasmer-wasi = "2.0"

anyhow = "1.0.81"
itertools = "0.12.1"
tempfile = "3.10.1"
structopt = "0.3.26"
clap = { version = "2.34", default-features = false }
shell-words = "1.1.0"
once_cell = "1.19.0"
directories = { package = "directories-next", version = "2.0" }
toml = "0.8"
async-trait = "0.1.78"
owning_ref = "0.4.1"
rpassword = "5.0"
strum = { version = "0.26.2", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false }

termcolor = "1.4"
textwrap = { version = "0.16", default-features = false }

sentry = "0.32.2"

[features]
default = ["build-cranelift"]
build-cranelift = ["wasmer-compiler-cranelift"]
build-llvm = ["wasmer-compiler-llvm", "inkwell", "llvm-sys-120"]

[build-dependencies]
wasmer = { version = "2.0", default-features = false, features = ["universal"] }
wasmer-engine = "2.0"
wasmer-compiler-cranelift = { version = "2.0", optional = true }
wasmer-compiler-llvm = { version = "2.0", optional = true }
llvm-sys-120 = { package = "llvm-sys", version = "120.3.2", features = ["prefer-static"], optional = true }

[dependencies.inkwell]
package = "inkwell"
version = "=0.1.0-beta.4"
default-features = false
features = ["llvm12-0"]
optional = true

[patch.crates-io]
multipart = { git = "https://github.com/coolreader18/multipart", rev = "ee033794ada7c322e3cef50713854dff873f546d" }
